--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Jane Smith</li>
+          <li class="name">Garcia Samson II</li>
           <li><a href="#">Home</a></li>
           <li><a href="#">Experience</a></li>
         </ul>
@@ -18,7 +18,7 @@
 
     <header>
       <img src="images/me.png" alt="Drawing of Jane Smith" class="profile-image">
-      <h1 class="tag name">Hello, I’m Jane.</h1>
+      <h1 class="tag name">Hello, I’m Garcia.</h1>
       <p class="tag location">My home is Portland, Oregon.</p>
     </header>
 
